fix create button having text 'submit query' on firefox

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -486,7 +486,6 @@ a {
 
 select {
     border: 0;
-    width: 95.3%; // i'm so bad at css
     border-bottom: 1px solid black;
     font: 0.7em $font-family;
 
